# Deribit_Trading

./: CMakeLists.txt  README.md  WebSocket_HFT.sln  WebSocket_HFT.vcxproj  WebSocket_HFT.vcxproj.filters  api_credentials.h  deribit_trader.cpp  latency_module.cpp  latency_module.h  trade_execution.cpp  trade_execution.h  websocket_handler.cpp  websocket_handler.h
